# discoZUNDA

./: .env.exsample  .gitignore  Dockerfile  README.md  README_ja.md  main.py  pyproject.toml  test.py  voicevox.json
commands/: base.py  hello.py  voicevox.py
util/: __init__.py  env.py  ui.py  voicevox.py
